student-app-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-app-client-service
spec:
  selector:
    app: student-app-client
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  type: ClusterIP
